<resources>
    <string name="app_name">MobileExercice</string>
    <string name="menu_item_sobre">Sobre</string>
    <string name="menu_item_inicio">Inicio</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="toggle_turn_on">Sim</string>
    <string name="toggle_turn_off">Não </string>
    <string name="btn_proximo">Próximo</string>
    <string name="Nome">Nome</string>
    <string name="Masculino">Masculino</string>
    <string name="Feminino">Feminino</string>
    <string name="Sexo">Sexo</string>
    <string name="Receber_Notificacoes">Receber Notificações</string>
    <string name="edtName">Digite seu nome</string>
    <string name="pais">País</string>
    <string name="menu_txt_settings">Settings</string>
    <string name="menu_item_sair">Sair</string>
    <string name="menu_item_diasSemana">Dias da semana</string>
    <string name="menu_item_diasSemana_dom">Domingo</string>
    <string name="menu_item_diasSemana_seg">Segunda</string>
    <string name="menu_item_diasSemana_ter">Terça</string>
    <string name="menu_item_diasSemana_qua">Quarta</string>
    <string name="menu_item_diasSemana_qui">Quinta</string>
    <string name="menu_item_diasSemana_sex">Sexta</string>
    <string name="menu_item_diasSemana_sab">Sábado</string>
    <string name="textViewTipoSangue">Tipo Sanguíneo</string>
    <string name="btn_tipoSangue">Tipo +-</string>
    <string name="popup_item_a_plus">A+</string>
    <string name="popup_item_a_less">A-</string>
    <string name="popup_item_b_plus">B+</string>
    <string name="popup_item_b_less">B-</string>
    <string name="popup_item_ab_plus">AB+</string>
    <string name="popup_item_ab_less">AB-</string>
    <string name="popup_item_o_plus">O+</string>
    <string name="popup_item_o_less">O-</string>
    <string name="title_activity_tela_cadastro2">TelaCadastro2</string>
    <string name="btn_voltar_cadastro1">Voltar</string>
    <string name="title_activity_inicio">Inicio</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_item_inicio">Inicio</string>
    <string name="tab_item_agendar">Agendar</string>
    <string name="tab_item_locais">Locais</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string name="titleApp">Doação de Sangue</string>
    <string name="btn_frag_agendar_cadastro">Agendar doação</string>
    <string name="Aceitar_Termos">Aceito Termos de Doação</string>
    <string name="Vazio"></string>
    <string name="cidadesDelocais">Cidades de coleta</string>

</resources>