<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/popup_item_a_plus"
        android:title="@string/popup_item_a_plus" />

    <item
        android:id="@+id/popup_item_a_less"
        android:title="@string/popup_item_a_less" />

    <item
        android:id="@+id/popup_item_b_plus"
        android:title="@string/popup_item_b_plus" />

    <item
        android:id="@+id/popup_item_b_less"
        android:title="@string/popup_item_b_less" />

    <item
        android:id="@+id/popup_item_ab_plus"
        android:title="@string/popup_item_ab_plus" />

    <item
        android:id="@+id/popup_item_ab_less"
        android:title="@string/popup_item_ab_less" />

    <item
        android:id="@+id/popup_item_o_plus"
        android:title="@string/popup_item_o_plus" />

    <item
        android:id="@+id/popup_item_o_less"
        android:title="@string/popup_item_o_less" />
</menu>