<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_cadastro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">


    <ToggleButton
        android:id="@+id/toggleButtonNotificacaoes"
        android:layout_width="236dp"
        android:layout_height="42dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="44dp"
        android:checked="true"
        android:textOff="@string/toggle_turn_off"
        android:textOn="@string/toggle_turn_on"
        app:layout_constraintBottom_toTopOf="@+id/buttonCadastrar"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:layout_width="163dp"
        android:layout_height="18dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="12dp"
        android:text="@string/Aceitar_Termos"
        app:layout_constraintBottom_toTopOf="@+id/toggleButtonNotificacaoes"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/buttonCadastrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="16dp"
        android:text="@string/btn_proximo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="383dp"
        android:layout_height="42dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:autofillHints="no"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/Vazio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNome" />

    <TextView
        android:id="@+id/textViewNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="32dp"
        android:labelFor="@id/editTextTextPersonName"
        android:text="@string/Nome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewSexo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:text="@string/Sexo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonTipoSangue" />

    <RadioGroup
        android:id="@+id/radioGroupSexo"
        android:layout_width="359dp"
        android:layout_height="103dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSexo">

        <RadioButton
            android:id="@+id/radioButtonMasculino"
            android:layout_width="108dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="72dp"
            android:text="@string/Masculino" />

        <RadioButton
            android:id="@+id/radioButtonFeminino"
            android:layout_width="116dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:text="@string/Feminino" />

    </RadioGroup>

    <Spinner
        android:id="@+id/spinnerCountry"
        android:layout_width="379dp"
        android:layout_height="45dp"
        android:layout_gravity="center"

        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPais" />

    <Button
        android:id="@+id/buttonTipoSangue"
        android:layout_width="375dp"
        android:layout_height="49dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/btn_tipoSangue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTipoSangue" />

    <TextView
        android:id="@+id/textViewBloodDonation"
        android:layout_width="117dp"
        android:layout_height="119dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/blood_donation"
        app:layout_constraintBottom_toTopOf="@+id/button_voltar_telaPrincipal"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewTipoSangue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/textViewTipoSangue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerCountry" />

    <TextView
        android:id="@+id/textViewPais"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="32dp"
        android:labelFor="@id/spinnerCountry"
        android:text="@string/pais"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

    <Button
        android:id="@+id/button_voltar_telaPrincipal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="16dp"
        android:text="@string/btn_voltar_cadastro1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>