<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">


    <ToggleButton
        android:id="@+id/toggleButtonNotificacaoes"
        android:layout_width="404dp"
        android:layout_height="40dp"
        android:layout_marginBottom="20dp"
        android:checked="true"
        android:textOff="@string/toggle_turn_off"
        android:textOn="@string/toggle_turn_on"
        app:layout_constraintBottom_toTopOf="@+id/buttonCadastrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewNotificacoes"
        android:layout_width="134dp"
        android:layout_height="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/Receber_Notificacoes"
        app:layout_constraintBottom_toTopOf="@+id/toggleButtonNotificacaoes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonCadastrar"
        android:layout_width="103dp"
        android:layout_height="35dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="#F7F7456E"
        android:text="@string/btn_proximo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textViewNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:labelFor="@id/editTextTextPersonName"
        android:text="@string/Nome"
        app:layout_constraintEnd_toStartOf="@+id/textViewSexo"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewSexo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="116dp"
        android:text="@string/Sexo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroupSexo"
        android:layout_width="116dp"
        android:layout_height="96dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSexo">

        <RadioButton
            android:id="@+id/radioButtonMasculino"
            android:layout_width="108dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="-1dp"
            android:layout_marginEnd="52dp"
            android:text="@string/Masculino"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="parent" />

        <RadioButton
            android:id="@+id/radioButtonFeminino"
            android:layout_width="116dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="60dp"
            android:text="@string/Feminino"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioButtonMasculino" />
    </RadioGroup>

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="211dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:autofillHints="no"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/edtName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNome" />

    <Spinner
        android:id="@+id/spinnerCountry"
        android:layout_width="212dp"
        android:layout_height="34dp"
        android:layout_gravity="center"

        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPais" />

    <TextView
        android:id="@+id/textViewPais"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="24dp"
        android:labelFor="@id/spinnerCountry"
        android:text="@string/pais"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

    <TextView
        android:id="@+id/textViewTipoSangue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="44dp"
        android:text="@string/textViewTipoSangue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerCountry" />

    <Button
        android:id="@+id/buttonTipoSangue"
        android:layout_width="214dp"
        android:layout_height="46dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:background="#F7F7456E"
        android:text="@string/btn_tipoSangue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTipoSangue" />

    <TextView
        android:id="@+id/textViewBloodDonation"
        android:layout_width="117dp"
        android:layout_height="119dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/blood_donation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupSexo" />

</androidx.constraintlayout.widget.ConstraintLayout>