<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityPrincipal"
    android:orientation="vertical">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FF554D"
        android:theme="@style/Theme.MobileExercice.AppBarOverlay">

        <TextView
            android:id="@+id/title"
            android:layout_width="372dp"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:minHeight="?actionBarSize"
            android:padding="@dimen/appbar_padding"
            android:text="@string/titleApp"
            android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:tabIndicatorColor="#FF554D">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_item_inicio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_item_inicio" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_item_locais"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_item_locais" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_item_agendar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_item_agendar" />

        </com.google.android.material.tabs.TabLayout>

    </com.google.android.material.appbar.AppBarLayout>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
    </LinearLayout>
